NewGame and Settings templates

--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/standard.css">
     <script src="/js/main.js"></script>
 
 </head>
@@ -13,12 +14,10 @@
     <div class="main-wrapper">
         <div class="heading">Geometriesprint</div>
             <div class="links">
-                <ul>
-                    <li><a href="/newGame.html" id="newGame" class="button">Neues Spiel</a></li>
-                    <li><a href="/resumeImport.html" id="newGame" class="button">Fortfahren / Importieren</a></li>
-                    <li><a href="/settings.html" id="newGame" class="button">Einstellungen</a></li>
-                    <li><a href="/editor.html" id="newGame" class="button">Map-Editor</a></li>
-                </ul>
+                    <div class="gradient-border"><li><a href="/newGame.html" id="newGame" class="button">Neues Spiel</a></li></div>
+                    <div class="gradient-border"><li><a href="/resumeImport.html" id="newGame" class="button">Fortfahren / Importieren</a></li></div>
+                    <div class="gradient-border"><li><a href="/settings.html" id="newGame" class="button">Einstellungen</a></li></div>
+                    <div class="gradient-border"><li><a href="/editor.html" id="newGame" class="button">Map-Editor</a></li></div>
             </div>
         </div>
     </div>
