--- a/resumeImport.html
+++ b/resumeImport.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/standard.css">
     <script src="/js/main.js"></script>
+
 </head>
 <body>
-    <H1>Fortfahren / Importieren</H1>
-    <a href="/menu.html" id="newGame" class="button">Hauptmenü</a>
+    <div class="main-wrapper">
+        <div class="heading">Fortfahren / Importieren</div>
+            <div class="links">
+                <ul>
+                    <li><a href="/gameLoop.html" id="newGame" class="button">Spielen</a></li>
+                    <li><a href="/inventory.html" id="newGame" class="button">Inventar</a></li>
+                    <li><a href="/statistics.html" id="newGame" class="button">Statistik</a></li>
+                    <li><a href="/exportGame.html" id="newGame" class="button">Map-Editor</a></li>
+                    <li><a href="/loadTexturePack.html" id="newGame" class="button">Texturepack laden</a></li>
+                    <li><a href="/menu.html" id="newGame" class="button">Hauptmenü</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
