--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <title>Geometriesprint</title>
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/standard.css">
+    <script src="/js/main.js"></script>
     <script src="/js/standard.js"></script>
 
 </head>
