--- a/resumeImport.html
+++ b/resumeImport.html
@@ -16,9 +16,8 @@
             <div class="links">
                 <ul>
                     <li><a href="/gameLoop.html" id="newGame" class="button">Spielen</a></li>
-                    <li><a href="/inventory.html" id="newGame" class="button">Inventar</a></li>
                     <li><a href="/statistics.html" id="newGame" class="button">Statistik</a></li>
-                    <li><a href="/exportGame.html" id="newGame" class="button">Map-Editor</a></li>
+                    <li><a href="/exportGame.html" id="newGame" class="button">Spiel importieren</a></li>
                     <li><a href="/loadTexturePack.html" id="newGame" class="button">Texturepack laden</a></li>
                     <li><a href="/menu.html" id="newGame" class="button">Hauptmenü</a></li>
                 </ul>
