changes for firefox

--- a/menu.html
+++ b/menu.html
@@ -14,10 +14,10 @@
     <div class="main-wrapper">
         <div class="heading">Geometriesprint</div>
             <div class="links">
-                    <div class="gradient-border"><li><a href="/newGame.html" id="newGame" class="button">Neues Spiel</a></li></div>
-                    <div class="gradient-border"><li><a href="/resumeImport.html" id="newGame" class="button">Fortfahren / Importieren</a></li></div>
-                    <div class="gradient-border"><li><a href="/settings.html" id="newGame" class="button">Einstellungen</a></li></div>
-                    <div class="gradient-border"><li><a href="/editor.html" id="newGame" class="button">Map-Editor</a></li></div>
+                    <div class="gradient-border"><a href="/newGame.html" id="newGame" class="button">Neues Spiel</a></div>
+                    <div class="gradient-border"><a href="/resumeImport.html" id="newGame" class="button">Fortfahren / Importieren</a></div>
+                    <div class="gradient-border"><a href="/settings.html" id="newGame" class="button">Einstellungen</a></div>
+                    <div class="gradient-border"><a href="/editor.html" id="newGame" class="button">Map-Editor</a></div>
             </div>
         </div>
     </div>
