new volume slider for safari

--- a/settings.html
+++ b/settings.html
@@ -16,14 +16,14 @@
             </div>
             <div class="settings">
                 <div class="volume">
-                        <div class="range-slider">
-                            <input type="range" min="0" max="100" value="50" id="volume-slider" class="slider">
-                            <div class="slider-thumb">
-                                <div class="tooltip">
-                                    <div class="tooltipNumber"></div>
-                                </div>
+                        <div class="range">
+                            <div class="sliderValue">
+                                <span>40</span>
                             </div>
-                            <div class="progress"></div>
+                            <div class="field">
+                                <input type="range" id="volume-slider" class="slider" min="0" max="100" step="1">
+                            
+                            </div> 
                         </div>
                         
                     <div class="volumeText">Lautstärke</div>
