--- a/game.html
+++ b/game.html
@@ -22,9 +22,13 @@
         
     </p>
     
+    <img src="img/player.png" alt="" style="display: none;" id="player_image">
 </body>
 <script src="map-files/1.js"></script>
 
+<script src="js/constants.js"></script>
+<script src="js/functions.js"></script>
+<script src="js/classes.js"></script>
 <script src="js/game.js"></script>
 
 </html>
