map-builder update

--- a/newGame.html
+++ b/newGame.html
@@ -16,12 +16,22 @@
             </div>
             <div class="startGameOrleave">
                 <input type="text" id="playername" name="Name" placeholder="Name">
-                <canvas id="chooseCharacter"></canvas>
+                <div class="selectMap">
+                    <div class="mapName" id="mapName" data-tooltip="">
+                    </div>
+                    
+                    <div class="progress" id="mapProgress"></div>
+                    <div class="attempts" id="mapAttempts"></div>
+                    <div class="maptime" id="mapTime">mapTime</div>
+                    <button id="prevMap"></button>
+                    <button id="nextMap"></button>
+                </div>
                 <div class="buttons">
                     <a href="/menu.html" id="backToMenu" class="button">Hauptmenü</a>
                     <a href="/gameloop.html" id="startGame" class="button">Start</a>
                 </div>
             </div>   
         </div>
+        <script src="/js/newGame.js"></script>
     </body>
 </html>
