death particles added, bottom movement particles added

--- a/game.html
+++ b/game.html
@@ -19,10 +19,9 @@
         </canvas>
     </div>
     <p id="score">
-        
     </p>
     
-    <img src="img/player.png" alt="" style="display: none;" id="player_image">
+    <img src="./img/player.png" alt="" style="display: none;" id="player_image">
 </body>
 <script src="map-files/1.js"></script>
 
