--- a/newGame.html
+++ b/newGame.html
@@ -19,7 +19,7 @@
                 <div class="selectMap">
                     <div class="mapName" id="mapName" data-tooltip="">
                     </div>
-                    
+                    <div class="mapID" id="mapID"></div>
                     <div class="progress" id="mapProgress"></div>
                     <div class="attempts" id="mapAttempts"></div>
                     <div class="maptime" id="mapTime">mapTime</div>
@@ -27,7 +27,7 @@
                     <button id="nextMap"></button>
                 </div>
                 <div class="buttons">
-                    <a href="/menu.html" id="backToMenu" class="button">Hauptmenü</a>
+                    <a href="/index.html" id="backToMenu" class="button">Hauptmenü</a>
                     <a href="/gameloop.html" id="startGame" class="button">Start</a>
                 </div>
             </div>   
