--- a/settings.html
+++ b/settings.html
@@ -42,10 +42,16 @@
                         Hintergrund
                     </div>
                 </div>
-                
+                <div class="texturepack">
+                    <label class="texturepackInput" id="customMap">
+                        <input type="file" accept="image/*" id="textrurepackPicture">
+                        Spielerbild hochladen (64px*64px)
+                    </label>
+                </div>
+
                 <div class="buttons">
-                    <a href="/menu.html" id="reset" class="button">Abbrechen</a>
-                    <a href="/menu.html" id="saveButton" class="button">Speichern</a>
+                    <a href="/index.html" id="reset" class="button">Abbrechen</a>
+                    <a href="/index.html" id="saveButton" class="button">Speichern</a>
                 </div>
             </div>   
         </div>
