--- a/statistics.html
+++ b/statistics.html
@@ -18,7 +18,7 @@
                     
 
                     </ul>
-                    <a href="/menu.html" id="newGame" class="button">Hauptmenü</a>
+                    <a href="/index.html" id="newGame" class="button">Hauptmenü</a>
                 
             </div>
         </div>
