Created Excel Map editor and new map Analysis

--- a/editor.html
+++ b/editor.html
@@ -24,7 +24,7 @@
             <canvas id="showMap" width="1000vw" height="80vw"></canvas>
             <button class="customMap" id="customMap">Eigene Map</button>
             <label class="decideAutoOrCustomMap" id="uploadCustomMap">
-                <input type="file" accept=".csv" id="csvMap">
+                <input type="file" accept=".txt" id="csvMap">
                 hochladen
             </label>
             <button class="decideAutoOrCustomMap" id="autoMap">
