improved jump and more user input options

--- a/game.html
+++ b/game.html
@@ -17,17 +17,21 @@
     <div class="container">
         <canvas class="align-center" id="canvas">
         </canvas>
+        <div id="output">
+          <h1 id="output-title">Gewonnen</h1>
+        </div>
     </div>
     <p id="score">
     </p>
     
     <img src="./img/player.png" alt="" style="display: none;" id="player_image">
 </body>
-<script src="map-files/1.js"></script>
+<script src="./map-files/1.js"></script>
 
-<script src="js/constants.js"></script>
-<script src="js/functions.js"></script>
-<script src="js/classes.js"></script>
-<script src="js/game.js"></script>
+<script src="./js/constants.js"></script>
+<script src="./js/functions.js"></script>
+<script src="./js/classes.js"></script>
+<script src="./js/user-input.js"></script>
+<script src="./js/game.js"></script>
 
 </html>
