--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
-    <link rel="stylesheet" href="/css/standard.css">
-    <script src="/js/main.js"></script>
-    <script src="/js/standard.js"></script>
+    <link rel="stylesheet" href="./css/standard.css">
+    <script src="./js/main.js"></script>
+    <script src="./js/standard.js"></script>
 
 </head>
 <body>
     <div class="main-wrapper">
         <div class="heading">Geometriesprint</div>
             <div class="links">
-                    <div class="gradient-border"><a href="/newGame.html" id="newGame" class="button">Neues Spiel</a></div>
-                    <div class="gradient-border"><a href="/statistics.html" id="newGame" class="button">Statistik</a></div>
-                    <div class="gradient-border"><a href="/settings.html" id="newGame" class="button">Einstellungen</a></div>
-                    <div class="gradient-border"><a href="/editor.html" id="newGame" class="button">Map-Editor</a></div>
-                    <div class="gradient-border"><a href="/about.html" id="newGame" class="button">About</a></div>
+                    <div class="gradient-border"><a href="./newGame.html" id="newGame" class="button">Neues Spiel</a></div>
+                    <div class="gradient-border"><a href="./statistics.html" id="newGame" class="button">Statistik</a></div>
+                    <div class="gradient-border"><a href="./settings.html" id="newGame" class="button">Einstellungen</a></div>
+                    <div class="gradient-border"><a href="./editor.html" id="newGame" class="button">Map-Editor</a></div>
+                    <div class="gradient-border"><a href="./about.html" id="newGame" class="button">About</a></div>
             </div>
         </div>
     </div>
