add full relative imports

--- a/newGame.html
+++ b/newGame.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Geometriesprint</title>
-        <link rel="stylesheet" href="/css/standard.css">
-        <link rel="stylesheet" href="/css/newGame.css">
-        <script src="/js/standard.js"></script>
+        <link rel="stylesheet" href="./css/standard.css">
+        <link rel="stylesheet" href="./css/newGame.css">
+        <script src="./js/standard.js"></script>
     </head>
     <body>
         <div class="main-wrapper">
@@ -27,11 +27,11 @@
                     <button id="nextMap"></button>
                 </div>
                 <div class="buttons">
-                    <a href="/index.html" id="backToMenu" class="button">Hauptmenü</a>
-                    <a href="/gameloop.html" id="startGame" class="button">Start</a>
+                    <a href="./index.html" id="backToMenu" class="button">Hauptmenü</a>
+                    <a href="./gameloop.html" id="startGame" class="button">Start</a>
                 </div>
             </div>   
         </div>
-        <script src="/js/newGame.js"></script>
+        <script src="./js/newGame.js"></script>
     </body>
 </html>
