--- a/settings.html
+++ b/settings.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Geometriesprint</title>
-        <link rel="stylesheet" href="/css/standard.css">
-        <link rel="stylesheet" href="/css/settings.css">
-        <script src="/js/standard.js"></script>
+        <link rel="stylesheet" href="./css/standard.css">
+        <link rel="stylesheet" href="./css/settings.css">
+        <script src="./js/standard.js"></script>
     </head>
     <body>
         <div class="main-wrapper">
@@ -50,12 +50,12 @@
                 </div>
 
                 <div class="buttons">
-                    <a href="/index.html" id="reset" class="button">Abbrechen</a>
-                    <a href="/index.html" id="saveButton" class="button">Speichern</a>
+                    <a href="./index.html" id="reset" class="button">Abbrechen</a>
+                    <a href="./index.html" id="saveButton" class="button">Speichern</a>
                 </div>
             </div>   
         </div>
 
-        <script src="/js/settings.js"></script>
+        <script src="./js/settings.js"></script>
     </body>
 </html>
