--- a/statistics.html
+++ b/statistics.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
-    <link rel="stylesheet" href="/css/menu.css">
-    <link rel="stylesheet" href="/css/standard.css">
-    <script src="/js/standard.js"></script>
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/standard.css">
+    <script src="./js/standard.js"></script>
 
 </head>
 <body>
     <div class="main-wrapper">
         <div class="heading">Statistik</div>
-                    <a href="/index.html" id="newGame" class="button">Hauptmenü</a>      
+                    <a href="./index.html" id="newGame" class="button">Hauptmenü</a>      
         </div>
     </div>
 
