--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Geometriesprint</title>
-        <link rel="stylesheet" href="/css/standard.css">
-        <script src="/js/standard.js"></script>
+        <link rel="stylesheet" href="./css/standard.css">
+        <script src="./js/standard.js"></script>
     </head>
     <body>
         <div class="main-wrapper">
@@ -15,7 +15,7 @@
             </div>
             <div class="about">
                 
-                <a href="/index.html" id="reset" class="button">zurück zum hauptmenü</a>
+                <a href="./index.html" id="reset" class="button">zurück zum hauptmenü</a>
             </div>   
         </div>
     </body>
