--- a/editor.html
+++ b/editor.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
-    <link rel="stylesheet" href="/css/standard.css">
-    <link rel="stylesheet" href="/css/editor.css">
+    <link rel="stylesheet" href="./css/standard.css">
+    <link rel="stylesheet" href="./css/editor.css">
 
-    <script src="/js/main.js"></script>
-    <script src="/js/standard.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/standard.js"></script>
     
 </head>
 <body>
@@ -36,9 +36,9 @@
             <button id="createMap">Map speichern</button>
             
         </div>
-        <a href="/index.html" id="newGame" class="button">Hauptmenü</a>
+        <a href="./index.html" id="newGame" class="button">Hauptmenü</a>
 
     </div>
-<script src="/js/map-editor.js"></script>
+<script src="./js/map-editor.js"></script>
 </body>
 </html>
