--- a/settings.html
+++ b/settings.html
@@ -45,7 +45,7 @@
                 <div class="texturepack">
                     <label class="texturepackInput" id="customMap">
                         <input type="file" accept="image/*" id="textrurepackPicture">
-                        Spielerbild hochladen (64px*64px)
+                        Spielerbild hochladen max: 512px*512
                     </label>
                 </div>
 
