custom Maps changes

--- a/game.html
+++ b/game.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="css/game.css">
 </head>
 <body>
-    <audio id="Song" autoplay>
-        <source src="aud/1.mp3" type="audio/mp3">
-      </audio>
     <div class="container">
+      <input type="file" accept="audio/*"  id="ownSong"> 
         <canvas class="align-center" id="canvas">
         </canvas>
         <div id="output-container">
