added new game state with audio upload

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-      <input type="file" accept="audio/*"  id="ownSong"> 
+      <input type="file" accept="audio/*"  id="ownSong" style="display: none;"> 
         <canvas class="align-center" id="canvas">
         </canvas>
         <div id="output-container">
