--- a/game.html
+++ b/game.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameloop</title>
+    <link rel="stylesheet" href="css/standard.css">
     <link rel="stylesheet" href="css/game.css">
+    <script src="./js/standard.js"></script>
 </head>
 <body>
     <div class="container">
