first default map

--- a/editor.html
+++ b/editor.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/editor.css">
 
     <script src="./js/main.js"></script>
-    <script src="./js/standard.js"></script>
+    <script src="./js/main.js"></script>
     
 </head>
 <body>
