--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Geometriesprint</title>
     <link rel="stylesheet" href="./css/standard.css">
     <script src="./js/main.js"></script>
-    <script src="./js/standard.js"></script>
+    <script src="./js/main.js"></script>
 
 </head>
 <body>
