--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Geometriesprint</title>
         <link rel="stylesheet" href="./css/standard.css">
-        <script src="./js/standard.js"></script>
+        <script src="./js/main.js"></script>
     </head>
     <body>
         <div class="main-wrapper">
