--- a/newGame.html
+++ b/newGame.html
@@ -7,7 +7,7 @@
         <title>Geometriesprint</title>
         <link rel="stylesheet" href="./css/standard.css">
         <link rel="stylesheet" href="./css/newGame.css">
-        <script src="./js/standard.js"></script>
+        <script src="./js/main.js"></script>
     </head>
     <body>
         <div class="main-wrapper">
