--- a/statistics.html
+++ b/statistics.html
@@ -7,8 +7,7 @@
     <title>Geometriesprint</title>
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/standard.css">
-    <script src="./js/standard.js"></script>
-
+    <script src="./js/main.js"></script>
 </head>
 <body>
     <div class="main-wrapper">
