--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/standard.css">
     <link rel="stylesheet" href="./css/editor.css">
 
-    <script src="./js/main.js"></script>
+    <script src="./js/standardMaps.js"></script>
+    <script src="./js/autoMapMapTiles.js"></script>
     <script src="./js/main.js"></script>
     
 </head>
