--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <title>Gameloop</title>
     <link rel="stylesheet" href="css/standard.css">
     <link rel="stylesheet" href="css/game.css">
+    <script src="./js/standardMaps.js"></script>
     <script src="./js/main.js"></script>
 </head>
 <body>
