--- a/newGame.html
+++ b/newGame.html
@@ -7,6 +7,7 @@
         <title>Geometriesprint</title>
         <link rel="stylesheet" href="./css/standard.css">
         <link rel="stylesheet" href="./css/newGame.css">
+        <script src="./js/standardMaps.js"></script>
         <script src="./js/main.js"></script>
     </head>
     <body>
