--- a/settings.html
+++ b/settings.html
@@ -46,7 +46,7 @@
                 <div class="texturepack">
                     <label class="texturepackInput" id="customMap">
                         <input type="file" accept="image/*" id="textrurepackPicture">
-                        Spielerbild hochladen max: 512px*512
+                        Spielerbild hochladen max: 512px*512px
                     </label>
                 </div>
 
