--- a/game.html
+++ b/game.html
@@ -28,7 +28,8 @@
                 <p id="controls-text" class="responsive-text">
                   <span class="standard-font-color">Leertaste</span> oder <span class="standard-font-color">Pfeiltaste</span> nach oben zum springen oder <br>
                   auf Mobilgeräten die <span class="standard-font-color">Springentaste</span> drücken<br>
-                  <span class="standard-font-color">R</span> drücken, um schnell neu zu starten
+                  <span class="standard-font-color">R</span> drücken, um schnell neu zu starten<br>
+                  <span class="standard-font-color">Esc</span> drücken, um zurück zum Hauptmenü zu gelangen
                 </p>
               </div>
             </div>
