--- a/newGame.html
+++ b/newGame.html
@@ -17,12 +17,12 @@
             </div>
             <div class="startGameOrleave">
                 <div class="selectMap">
-                    <div class="mapName" id="mapName" data-tooltip="">
+                    <div class="newGameStatus mapName" id="mapName" data-tooltip="">
                     </div>
-                    <div class="mapID" id="mapID"></div>
-                    <div class="progress" id="mapProgress"></div>
-                    <div class="attempts" id="mapAttempts"></div>
-                    <div class="maptime" id="mapTime">mapTime</div>
+                    <div class="newGameStatus mapID" id="mapID"></div>
+                    <div class="newGameStatus progress" id="mapProgress"></div>
+                    <div class="newGameStatus attempts" id="mapAttempts"></div>
+                    <div class="newGameStatus maptime" id="mapTime">mapTime</div>
                     <button id="prevMap"></button>
                     <button id="nextMap"></button>
                 </div>
