--- a/statistics.html
+++ b/statistics.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometriesprint</title>
-    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/statistics.css">
     <link rel="stylesheet" href="./css/standard.css">
     <script src="./js/standardMaps.js"></script>
     <script src="./js/main.js"></script>
+    
 </head>
 <body>
     <div class="main-wrapper">
         <div class="heading">Statistik</div>
+        <div class="statistics">
+            <div class="statisticValue" id="attempts">Versuche: 0</div>
+            <div class="statisticValue" id="jumps">Sprünge: 0</div>
+            <div class="statisticValue" id="timeSpend">Spielzeit: 0 Minuten</div>
+            <div class="statisticValue" id="distance_traveled">Blöcke gelaufen: 0</div>
+        </div>
+        
                     <a href="./index.html" id="newGame" class="button">Hauptmenü</a>      
         </div>
     </div>
-
+<script src="./js/statistics.js"></script>
 </body>
 </html>
