--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,11 @@
                         Spielerbild hochladen max: 512px*512px
                     </label>
                 </div>
-
+                <div class="particles">
+                    <label class="particleInputState" id="particleState">
+                        Partikeleffekte: Viel
+                    </label>
+                </div>
                 <div class="buttons">
                     <a href="./index.html" id="reset" class="button">Abbrechen</a>
                     <a href="./index.html" id="saveButton" class="button">Speichern</a>
