--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
           </div>
         </div>
     </div>
-   
+    <div id="back-button">← Zurück zum Hauptmenü</div>
     <img src="./img/player.png" alt="" style="display: none;" id="player_image">
 </body>
 
