--- a/statistics.html
+++ b/statistics.html
@@ -27,6 +27,7 @@
             <div class="statisticValue" id="jumps"></div>
             <div class="statisticValue" id="timeSpend"></div>
             <div class="statisticValue" id="distance_traveled"></div>
+            <div class="statisticValue" id="distance_per_attempt"></div>
         </div>
         
                     <a href="./index.html" id="newGame" class="button">Hauptmenü</a>      
